--- a/src/app/screens/review-page/review-page.component.html
+++ b/src/app/screens/review-page/review-page.component.html
@@ -510,7 +510,7 @@
             >
               <img
                 style="width: 100%"
-                src="../../../assets/Rating section.png"
+                src="../../../assets/review mobile bg.png"
               />
             </div>
           </div>
