--- a/src/app/screens/bot-settings/bot-settings.component.css
+++ b/src/app/screens/bot-settings/bot-settings.component.css
@@ -155,7 +155,8 @@ input[type="number"] {
   margin-top: 1.5rem;
   padding: 2rem;
   display: flex;
-  gap: 5rem;
+  flex-direction: column;
+  gap: 2rem;
 }
 
 .r-a-c-p-left {
@@ -225,7 +226,7 @@ input[type="number"] {
 
 .r-a-c-p-right {
   display: flex;
-  align-items: flex-end;
+  justify-content: right;
 }
 
 .r-a-c-p-right button {
@@ -738,6 +739,7 @@ input[type="number"] {
   gap: 30px;
   position: relative;
   align-items: end;
+  flex-direction: column;
 }
 
 .saa div {
