--- a/src/app/screens/block-list/block-list.component.html
+++ b/src/app/screens/block-list/block-list.component.html
@@ -34,7 +34,15 @@
       </svg>
       <span style="font-size: 13px; font-weight: 700">Important Note:</span>
     </span>
-    <p style="font-size: 13px; font-weight: 400; color: black; padding: 2px">
+    <p
+      style="
+        font-size: 13px;
+        font-weight: 400;
+        color: black;
+        padding: 2px;
+        width: 80%;
+      "
+    >
       Adding phone numbers to blocked list will prevent that number from
       receiving WhatApp and/or SMS. Add the number below and select the message
       types you do not want the number to receive.
