--- a/src/app/screens/qr-page/qr-page.component.html
+++ b/src/app/screens/qr-page/qr-page.component.html
@@ -4179,7 +4179,7 @@
 
     <div style="display: flex; gap: 10px">
       <button
-        click="fetchQrList()"
+        (click)="fetchQrList()"
         style="
           border-radius: 8px;
           background: linear-gradient(270deg, #2ebc96 0%, #1a9096 100%);
