--- a/src/app/screens/block-list/block-list.component.css
+++ b/src/app/screens/block-list/block-list.component.css
@@ -261,6 +261,7 @@
   padding: 20px;
   box-shadow: 0px 4px 20px 0px rgba(112, 144, 128, 0.2);
   border-radius: 20px;
+  height: calc(100vh - 105.8px);
 }
 
 .top {
