--- a/src/app/screens/bot-settings/bot-settings.component.css
+++ b/src/app/screens/bot-settings/bot-settings.component.css
@@ -210,7 +210,7 @@ input[type="number"] {
 }
 
 .inp-con input {
-  padding: 0.7rem;
+  padding: 0.7rem 2px;
   text-align: center;
   border: none;
   outline: none;
@@ -222,6 +222,9 @@ input[type="number"] {
   width: 100%;
   flex: 1;
   line-height: normal;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .r-a-c-p-right {
