--- a/src/app/screens/my-reviews/my-reviews.component.css
+++ b/src/app/screens/my-reviews/my-reviews.component.css
@@ -67,6 +67,8 @@ main {
   border: 0.856px solid white;
   background: rgba(217, 217, 217, 0.4);
   color: white;
+
+  outline: none;
 }
 
 .filter input::-webkit-input-placeholder {
